--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Avaliação - Eduardo Victor</title>
+<title>Avaliaï¿½ï¿½o - Eduardo Victor</title>
 </head>
 
 <body>
@@ -10,9 +10,9 @@
 	<h1>Respostas da lista 01 - Servidores Web, JSP e Servlets</h1>
 	<ul>
 		<li><a href="q1.html">Resposta 01</a></li>
-		<li><a href="">Resposta 02</a></li>
-		<li><a href="callDisplayHeader.jsp">Resposta 03</a></li>
-		<li><a href="">Resposta 04</a></li>
+		<li><a href="q2.html">Resposta 02</a></li>
+		<li><a href="q3.jsp">Resposta 03</a></li>
+		<li><a href="q4.html">Resposta 04</a></li>
 		<li><a href="">Resposta 05</a></li>
 		<li><a href="">Resposta 06</a></li>
 	</ul>
