Adicionando 2 sections (formação e conhecimentos) e começando a section contato

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 		<li><a href="q3.jsp">Resposta 03</a></li>
 		<li><a href="q4.html">Resposta 04</a></li>
 		<li><a href="">Resposta 05</a></li>
-		<li><a href="">Resposta 06</a></li>
+		<li><a href="q6.html">Resposta 06</a></li>
 	</ul>
 
 </body>
