--- a/src/main/webapp/q4.html
+++ b/src/main/webapp/q4.html
@@ -6,6 +6,11 @@
 
 <link rel="stylesheet" type="text/css" href="css/styleQ4.css">
 
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -16,9 +21,10 @@
 			<nav class="list-header">
 				<ul>
 					<li><a href="#section-dados-pessoais">Dados Pessoais</a></li>
-					<li><a href="">Formação</a></li>
+					<li><a href="#formacao">Formação</a></li>
+					<li><a href="#conhecimentos">Conhecimentos</a></li>
 					<li><a href="">Experiências</a></li>
-					<li><a href="">Redes Sociais</a></li>
+					<li><a href="#contato">Contato</a></li>
 				</ul>
 			</nav>
 			<!-- list-header -->
@@ -42,21 +48,103 @@
 
 			<img src="imagens/Formal.jpg">
 			<h1>SOBRE MIM</h1>
-			<p>Olá, meu nome é Eduardo, tenho 19 anos e sou do RN. Sou
-				estudante do curso de Sistemas de Informação da UFRN.</p>
+			<p>Olá, meu nome é Eduardo, tenho 19 anos e sou do RN. Atuando
+				estou cursando Sistemas de Informação da UFRN.</p>
 		</div>
-		<!-- section-dados-pessoais -->
+		<!-- container -->
 
 	</section>
+	<!-- section-dados-pessoais -->
 
 	<section id="formacao">
-	
+
+		<h1>Formação</h1>
+
+		<div class="elemento">
+			<div class="descricao">
+				<h2>Bacharelado em Sistemas de Informação</h2>
+				<p>2017 - 2020</p>
+			</div>
+			<!-- descricao -->
+
+			<div class="img-instituicao">
+				<img src="imagens/ufrn-logo.png">
+			</div>
+			<!-- img-instituicao -->
+			<div class="clear"></div>
+		</div>
+		<!-- elemento -->
+
+
 	</section>
-	
-	<section id="experiencia"></section>
+	<!-- formacao -->
 
-	<footer> </footer>
+	<section id="conhecimentos">
 
+		<h1>Conhecimentos</h1>
+
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<img src="imagens/html.png">
+				</div>
+				<div class="col">
+					<img src="imagens/css.png">
+				</div>
+				<div class="col">
+					<img src="imagens/js.png">
+				</div>
+			</div>
+		</div>
+		<!-- container -->
+	</section>
+	<!-- conhecimentos -->
+
+	<section id="contato">
+
+		<div class="form-contato">
+
+			<form class="text-center p-5">
+
+				<p class="h2 mb-4">Me envie uma mensagem :)</p>
+
+				<input type="text" id="email" class="form-control mb-4"
+					placeholder="Nome"> <input type="email"
+					class="form-control mb-4" placeholder="E-mail">
+
+				<div class="form-group">
+					<textarea class="form-control rounded-0" rows="3"
+						placeholder="Digite aqui sua mensagem..."></textarea>
+				</div>
+
+				<button class="btn btn-info btn-block" type="submit">Enviar</button>
+
+			</form>
+			<!-- form -->
+		</div>
+		<!-- form-contato -->
+
+		<div class="redes-sociais">
+			<nav class="list-redes-sociais"></nav>
+		</div>
+
+
+
+	</section>
+
+
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
