--- a/src/main/webapp/q6.html
+++ b/src/main/webapp/q6.html
@@ -6,33 +6,46 @@
 
 <link rel="stylesheet" type="text/css" href="css/styleQ6.css">
 
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
 
 </head>
 
 <body>
-	<div class="container">
-		<form class="form" method="post">
+	<div class="form-login">
+		<h1>Faça seu login:</h1>
+		<div class="container">
+			<form action="/ex1-eduardo/Controller" method="post">
+				<div class="form-group">
+					<label for="email">Email:</label> <input type="email"
+						class="form-control" name="email" id="email" required>
+				</div>
+				<div class="form-group">
+					<label for="pwd">Senha:</label> <input type="password"
+						class="form-control" name="senha" id="pwd" required>
+				</div>
+				<button type="submit" class="btn btn-default">Enviar</button>
+			</form>
 
-			<h2>Tela de Login!</h2>
-			<div class="form-conjunto">
-				<p>*E-mail</p>
-				<input type="text" name="email" placeholder="Digite seu e-mail...">
-			</div>
-
-			<div class="form-conjunto">
-				<p>*Senha</p>
-				<input type="text" name="telefone" type="password"
-					placeholder="Digite seu telefone...">
-			</div>
-
-			<p>*Campos Obrigatórios</p>
-
-			<div class="btn-submit">ENTRAR</div>
-
-		</form><!--form-->
+		</div>
 	</div>
 
 
+
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
 
 </body>
 
