Adicionando section contato e footer

--- a/src/main/webapp/q4.html
+++ b/src/main/webapp/q4.html
@@ -102,35 +102,80 @@
 
 	<section id="contato">
 
-		<div class="form-contato">
 
-			<form class="text-center p-5">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
 
-				<p class="h2 mb-4">Me envie uma mensagem :)</p>
+					<div class="form-contato">
 
-				<input type="text" id="email" class="form-control mb-4"
-					placeholder="Nome"> <input type="email"
-					class="form-control mb-4" placeholder="E-mail">
+						<form class="text-center p-5">
 
-				<div class="form-group">
-					<textarea class="form-control rounded-0" rows="3"
-						placeholder="Digite aqui sua mensagem..."></textarea>
+							<p class="h2 mb-4">Me envie uma mensagem :)</p>
+
+							<input type="text" id="email" class="form-control mb-4"
+								placeholder="Nome"> <input type="email"
+								class="form-control mb-4" placeholder="E-mail">
+
+							<div class="form-group">
+								<textarea class="form-control rounded-0" rows="3"
+									placeholder="Digite aqui sua mensagem..."></textarea>
+							</div>
+
+							<button class="btn btn-info btn-block" type="submit">Enviar</button>
+
+						</form>
+						<!-- form -->
+					</div>
+					<!-- form-contato -->
+
 				</div>
+				<div class="col-md-4">
 
-				<button class="btn btn-info btn-block" type="submit">Enviar</button>
+					<div class="redes-sociais">
+						<nav class="list-redes-sociais">
+							<ul>
+								<li><img src="imagens/map-localization.png"><span>Ipueira/RN</span>
+								</li>
+								<li><img src="imagens/email.png"><span>eduvictornobrega@gmail.com</span>
+								</li>
+								<li><img src="imagens/phone-call.png"><span>84
+										999402424</span></li>
+							    <li>
+							     <ul class="icons">
+							         <li><a target="_blank" href="https://www.facebook.com/eduardo.victor.37625"><img src="imagens/facebook.png"></a></li>
+							         <li><a target="_blank" href="https://twitter.com/Eduardo33884378"><img src="imagens/twitter.png"></a></li>
+							         <li><a target="_blank" href="https://www.linkedin.com/in/eduardo-victor-87486b14a/"><img src="imagens/linkedin.png"></a></li>
+							         <li><a target="_blank" href="http://github.com/eduviictor"><img src="imagens/github-logo.png"></a></li>
+							     </ul>
+							    </li>
+							</ul>
+						</nav>
+					</div>
 
-			</form>
-			<!-- form -->
+				</div>
+			</div>
 		</div>
-		<!-- form-contato -->
+		<!-- container -->
 
-		<div class="redes-sociais">
-			<nav class="list-redes-sociais"></nav>
-		</div>
-
-
+		<div class="clear"></div>
 
 	</section>
+	
+	<footer>
+	
+	   <div class="container">
+	       <div clas="row">
+	           <div class="col-md-6 footer-nome">
+	               <p>Eduardo Victor</p>
+	           </div>
+	           <div class="col-md-6 footer-mensagem">
+	               <p>Todos os direitos reservados</p>
+	           </div>
+	       </div>
+	   </div>
+	
+	</footer>
 
 
 
