--- a/src/main/webapp/q4.html
+++ b/src/main/webapp/q4.html
@@ -23,7 +23,6 @@
 					<li><a href="#section-dados-pessoais">Dados Pessoais</a></li>
 					<li><a href="#formacao">Formação</a></li>
 					<li><a href="#conhecimentos">Conhecimentos</a></li>
-					<li><a href="">Experiências</a></li>
 					<li><a href="#contato">Contato</a></li>
 				</ul>
 			</nav>
@@ -141,14 +140,26 @@
 								</li>
 								<li><img src="imagens/phone-call.png"><span>84
 										999402424</span></li>
-							    <li>
-							     <ul class="icons">
-							         <li><a target="_blank" href="https://www.facebook.com/eduardo.victor.37625"><img src="imagens/facebook.png"></a></li>
-							         <li><a target="_blank" href="https://twitter.com/Eduardo33884378"><img src="imagens/twitter.png"></a></li>
-							         <li><a target="_blank" href="https://www.linkedin.com/in/eduardo-victor-87486b14a/"><img src="imagens/linkedin.png"></a></li>
-							         <li><a target="_blank" href="http://github.com/eduviictor"><img src="imagens/github-logo.png"></a></li>
-							     </ul>
-							    </li>
+								<li>
+									<ul class="icons">
+										<li><a target="_blank"
+											href="https://www.facebook.com/eduardo.victor.37625"><img
+												src="imagens/facebook.png"></a></li>
+										<li><a target="_blank"
+											href="https://twitter.com/Eduardo33884378"><img
+												src="imagens/twitter.png"></a></li>
+										<li><a target="_blank"
+											href="https://www.linkedin.com/in/eduardo-victor-87486b14a/"><img
+												src="imagens/linkedin.png"></a></li>
+										<li><a target="_blank"
+											href="http://github.com/eduviictor"><img
+												src="imagens/github-logo.png"></a></li>
+										<li><a target="_blank"
+											href="http://lattes.cnpq.br/5998084531402428"><img
+												src="imagens/curriculum.png"></a></li>
+
+									</ul>
+								</li>
 							</ul>
 						</nav>
 					</div>
@@ -161,20 +172,20 @@
 		<div class="clear"></div>
 
 	</section>
-	
+
 	<footer>
-	
-	   <div class="container">
-	       <div clas="row">
-	           <div class="col-md-6 footer-nome">
-	               <p>Eduardo Victor</p>
-	           </div>
-	           <div class="col-md-6 footer-mensagem">
-	               <p>Todos os direitos reservados</p>
-	           </div>
-	       </div>
-	   </div>
-	
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 footer-nome">
+					<p>Eduardo Victor</p>
+				</div>
+				<div class="col-md-6 footer-mensagem">
+					<p>Todos os direitos reservados</p>
+				</div>
+			</div>
+		</div>
+
 	</footer>
 
 
