--- a/src/main/webapp/q6.html
+++ b/src/main/webapp/q6.html
@@ -19,8 +19,8 @@
 		<div class="container">
 			<form action="/ex1-eduardo/Controller" method="post">
 				<div class="form-group">
-					<label for="email">Email:</label> <input type="email"
-						class="form-control" name="email" id="email" required>
+					<label for="nome">Nome:</label> <input type="text"
+						class="form-control" name="nome" id="nome" required>
 				</div>
 				<div class="form-group">
 					<label for="pwd">Senha:</label> <input type="password"
